<resources>
    <string name="app_name">Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_txt">Doctor Digital</string>
    <string name="onboarding1_title_txt">Find Trusted Doctors</string>
    <string name="onboarding1_subtitle_txt">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of it over 2000 years old.</string>
    <string name="onboarding_btn_txt_next">Next</string>
    <string name="onboarding_btn_txt_skip">skip</string>
    <string name="onboarding2_title_txt">Choose Best Doctors</string>
    <string name="onboarding2_subtitle_txt">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of it over 2000 years old.</string>
    <string name="onboarding3_title_txt">Easy Appointments</string>
    <string name="onboarding3_subtitle_txt">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of it over 2000 years old.</string>
    <string name="onboarding_btn_txt_get_started">Get Started</string>
    <string name="login_welcome_txt">Welcome Back</string>
    <string name="login_subtitle_txt">You can search course, apply course and find scholarship for abroad studies</string>
    <string name="login_email_hint_txt">E-mail</string>
    <string name="login_password_hint_txt">Password</string>
    <string name="login_btn_forgot_txt">Forgot password</string>
    <string name="login_btn_login_txt">Login</string>
    <string name="login_btn_dont_have_an_account">Don´t have an account? Join us</string>
    <string name="sign_up_title">Join us to start searching</string>
    <string name="sign_up_subtitle">You can search c ourse, apply course and find scholarship for abroad studies</string>
    <string name="login_name_hint_txt">Name</string>
    <string name="sign_up_i_agree_txt"><![CDATA[I agree with the Terms os Services & Privacy Policy]]></string>
    <string name="sign_up_btn_txt">Sign up</string>
    <string name="sign_up_have_an_account_txt">Have an account? Log in</string>
    <string name="forgot_title_txt">Forgot password</string>
    <string name="forgot_subtitle">Enter your email for the verification proccesss, we will send 4 digits code to your email.</string>
    <string name="forgot_btn_continue_txt">Continue</string>
    <string name="profile_title_txt">Set up your profile</string>
    <string name="profile_subtitle_txt">Update your profile to connect your doctor with better impression</string>
    <string name="profile_personal_info_title">Personal information</string>
    <string name="profile_edittxt_name">Nome</string>
    <string name="login_contact_number_hint_txt">Contact number</string>
    <string name="login_date_birth_hint_txt">Date of birth</string>
    <string name="login_location_hint_txt">Location</string>
    <string name="profile_btn_txt">Continue</string>
    <string name="title_activity_find_doctors">FindDoctorsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="find_doctor_item_name_txt">Dr. Shruti Kedia</string>
    <string name="find_doctor_item_specialization_txt">Tooth Dentist</string>
    <string name="find_doctor_item_experience_txt">%1$d Years experience</string>
    <string name="find_doctor_item_classification_txt">1.2</string>
    <string name="profile_btn_refresh_txt">Refresh</string>
    <string name="find_doctor_item_book_now_btn_txt">Booking Now</string>
</resources>