<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:text="@string/sign_up_subtitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:background="@color/white"
        android:src="@drawable/google_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_social_media_background"
        android:src="@drawable/facebook_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_name"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="400dp"
        android:hint="@string/login_name_hint_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="450dp"
        android:hint="@string/login_email_hint_txt"
        app:endIconDrawable="@drawable/ic_baseline_done_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="500dp"
        android:hint="@string/login_password_hint_txt"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_i_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="570dp"
        android:background="@drawable/btn_background_circle"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="570dp"
        android:gravity="center"
        android:text="@string/sign_up_i_agree_txt"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/btn_i_agree"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="640dp"
        android:background="@drawable/btn_background_retangle"
        android:elevation="10dp"
        android:text="@string/sign_up_btn_txt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_have_and_account"
        android:layout_width="170dp"
        android:layout_height="54dp"
        android:layout_marginTop="690dp"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:text="@string/sign_up_have_an_account_txt"
        android:textAllCaps="false"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginStart="-320dp"
        android:layout_marginTop="-300dp"
        android:src="@drawable/alphas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="580dp"
        android:src="@drawable/alphas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>