<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_welcome_txt"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:text="@string/login_subtitle_txt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:src="@drawable/google_logo"
        android:background="@drawable/login_social_media_background"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"
        style="@style/Widget.Material3.Button"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="260dp"
        android:src="@drawable/facebook_logo"
        android:background="@drawable/login_social_media_background"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="add"
        style="@style/Widget.Material3.Button"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="378dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_done_24"
        android:hint="@string/login_email_hint_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="450dp"
        android:hint="@string/login_password_hint_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginStart="-320dp"
        android:layout_marginTop="-300dp"
        android:src="@drawable/alphas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="580dp"
        android:src="@drawable/alphas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>